# TLogger

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  THIRD-PARTY-NOTICES.md
TLogger/: CMakeLists.txt  TLogger.sln
TLogger/LoggerTest/: CMakeLists.txt  LoggerTest.vcxproj  LoggerTest.vcxproj.filters  main.cpp
TLogger/LoggerTest/x64/Debug/: LoggerTest.exe.recipe  vc143.idb
TLogger/LoggerTest/x64/Debug/LoggerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LoggerTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TLogger/LoggerTest/x64/Release/: LoggerTest.exe.recipe  LoggerTest.iobj  LoggerTest.ipdb
TLogger/LoggerTest/x64/Release/LoggerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LoggerTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TLogger/TLogger/: CMakeLists.txt  ILogger.cpp  ILogger.h  TLogger.cpp  TLogger.h  TLogger.vcxproj  TLogger.vcxproj.filters
TLogger/TLogger/x64/Debug/: TLogger.dll.recipe  TLoggerD.dll.recipe  vc143.idb
TLogger/TLogger/x64/Debug/TLogger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TLogger/TLogger/x64/Release/: TLogger.dll.recipe  TLogger.iobj  TLogger.ipdb
TLogger/TLogger/x64/Release/TLogger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/LoggerTest/: CMakeLists.txt  main.cpp
src/TLogger/: CMakeLists.txt
